compilers_fasto/tests/neg_simple.err
Type error: Unexpected argument to main: int -> int (should be () -> <anything>) at line 2, column 9
