compilers_fasto/tests/neg_simple.fo
// A simple negative test, as 'main' cannot take any arguments.
fun int main(int t) = t
